--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "passport-local": "^1.0.0",
     "session-file-store": "^1.5.0",
     "socket.io": "^4.7.5",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "twilio": "^5.2.2",
     "uuid": "^9.0.1",
     "winston": "^3.13.1"
