--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/server.js --mode production",
-    "dev": "node src/server.js --mode development"
+    "dev": "node src/server.js --mode development",
+    "test": "mocha test/supertest.test.js"
   },
   "keywords": [],
   "author": "Adrian",
@@ -58,6 +59,8 @@
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
     "@types/uuid": "^10.0.0",
+    "chai": "^5.1.1",
+    "mocha": "^10.7.0",
     "nodemon": "^3.1.0",
     "supertest": "^7.0.0"
   },
