--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
     "artillery-plugin-metrics-by-endpoint": "^1.12.0",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "commander": "^12.1.0",
