--- a/src/docs/carritos/carritos.yaml
+++ b/src/docs/carritos/carritos.yaml
@@ -63,7 +63,7 @@ paths:
         "500":
           description: Error interno del servidor, usualmente generado por una query defectuosa o un fallo de la app
 
-  /api/cartsDB/{cartId}/product/{productId}:
+  /api/cartsDB/{cartId}/product/{pid}:
     post:
       summary: Agrega un producto al carrito
       tags: 
@@ -78,7 +78,7 @@ paths:
           required: true
           description: El ID del carrito
         - in: path
-          name: productId
+          name: pid
           schema:
             type: string
           required: true
@@ -149,7 +149,7 @@ paths:
           required: true
           description: El ID del carrito
         - in: path
-          name: productId
+          name: pid
           schema:
             type: string
           required: true
@@ -220,7 +220,7 @@ paths:
           required: true
           description: El ID del carrito
         - in: path
-          name: productId
+          name: pid
           schema:
             type: string
           required: true
