Protecto-Final-Backend-3.0

--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,7 @@ node_modules
 clase0
 
 # Ignora el archivo .env.development
-.env
-.env.development
-.env.production
+.env*
 
 # ignora comentado.js
 .comentado.js
