--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/server.js --mode production",
-    "dev": "nodemon src/server.js",
+    "dev": "nodemon src/server.js -- mode development",
     "test": "echo \"Error: no test specified\" && exit 1"
 },
   "keywords": [],
